# Tool

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_ANALYSIS.md  README.md  dev-requirements.in  dev-requirements.txt  main_workflow.py  requirements.in  requirements.txt  tatus --porcelain
Localization_Tool/: pyproject.toml  test_apply_mapping.py  test_full_workflow.py  test_string_extract.py
Localization_Tool/src/common/: localization_tool.py
Localization_Tool/test/: test_self_supervised.py  test_tree_sitter.py  test_yaml_utils.py
config/: directory_mapping.json  settings.json
docs/: DEPENDENCY_MANAGEMENT.md  File_tree.txt  dependency_analysis_report.md  src_tree.txt
legacy/: analyze_dependencies.py  installed_packages.txt
legacy/Localization_Tool/: File.txt  dev-requirements.txt  requirements.txt  run_localization.py
legacy/py/: check_modification.py  config_utils.py  core extend_mode.py  core extract_mode.py  extractor.py  file_utils.py  jar_utils.py  language_context.py  language_resource.py  language_utils.py  levenshtein_utils.py  logger_utils.py  main.py  mapper.py  report_utils.py  string_extractor.py  suggestion_generator.py  test_localization_file.py  tools_integrator.py  tree_sitter_utils.py  yaml_utils.py
src/: __init__.py  main.py  workflow.py
src/common/: README.md  __init__.py  config_utils.py  file_utils.py  logger_utils.py  mod_info_utils.py  parallel_utils.py  report_utils.py  suggestion_generator.py  timestamp_utils.py  tools_integrator.py  tree_sitter_utils.py  yaml_utils.py
src/decompile_mode/: README.md  core.py
src/extend_mode/: README.md  (+2 more)
tools/: README.md
(+386 files in other folders)
